Add file filtering functionality

--- a/view/client/file/file.templ
+++ b/view/client/file/file.templ
@@ -108,9 +108,9 @@ templ MainContent(title string, files []types.FileData, user types.User, allowan
 						<svg xmlns="http://www.w3.org/2000/svg" class="absolute left-3 top-1/2 -translate-y-1/2 h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
 						</svg>
-						<input type="text" hx-get="/file" hx-trigger="keyup changed delay:500ms, focus" hx-include="[name='status']" hx-target="#file-table" name="q" placeholder="Search files..." class="w-full pl-10 pr-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+						<input type="text" hx-get="/file/query" hx-trigger="keyup changed delay:500ms, focus" hx-include="[name='status']" hx-target="#file-table" name="q" placeholder="Search files..." class="w-full pl-10 pr-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"/>
 					</div>
-					<select hx-get="/file" hx-trigger="change" hx-include="[name='q']" hx-target="#file-table" name="status" class="w-48 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+					<select hx-get="/file/query" hx-trigger="change" hx-include="[name='q']" hx-target="#file-table" name="status" class="w-48 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
 						<option value="">All</option>
 						<option value="private">Private</option>
 						<option value="public">Public</option>
